# MYKO

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MYKO-prompt-kit.md  README.md  SECURITY.md  release-please-config.json  requirements.txt  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
backend/: __init__.py  bridge.py  config.py  crypto.py  lightning.py  logging_config.py  main.py  mcp_server.py  mcp_tools.py  models.py  nostr.py  security.py  storage.py  vault.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: main.rs
frontend/src/api/: bridge.ts
frontend/src/components/: AuditFeed.tsx  Dashboard.tsx  GlassCard.tsx  GooseStatus.tsx  IdentityPanel.tsx  Layout.tsx  LightningPanel.tsx  StateOrb.tsx  VaultExplorer.tsx  VaultPanel.tsx
frontend/src/hooks/: usePolling.ts  useSessionToken.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
goose/: goose_config.yaml  sovereign_manifesto.md
landing/: index.html  styles.css
scripts/: e2e_vault.py
tests/: test_crypto.py  test_lightning.py  test_mcp_server.py  test_mcp_tools.py  test_nip44_vectors.py  test_nostr.py  test_storage.py  test_vault.py
