[package]
name = "myko"
version = "0.1.0"
description = "MYKO — Sovereign Life OS"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
once_cell = "1"

[target."cfg(unix)".dependencies]
nix = { version = "0.31", features = ["signal"] }

[[bin]]
name = "myko"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
